--- a/src/components/InputAdd.css
+++ b/src/components/InputAdd.css
@@ -1,8 +1,3 @@
-.map {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 .autoInput {
   display: flex;
   flex-direction: column;
@@ -13,15 +8,6 @@
   margin-top: 10px;
 }
 
-.removeInput {
-  border-radius: 100%;
-  background-color: black;
-  color: white;
-  position: absolute;
-  z-index: 1;
-  top: 48px;
-  left: 1085px;
-}
 
 .removeInput2 {
   border-radius: 100%;
@@ -30,5 +16,5 @@
   position: absolute;
   z-index: 1;
   top: 86px;
-  left: 1085px;
+  left: 1060px !important;
 }
